# escl-mock-server

./: Cargo.toml  README.md  escl_scanner.inf  flake.nix  run_escl_server.bat
.github/workflows/: artifacts.yml  ci.yml
res/: default_scanner_caps.xml
res/regexes/: IPV4_REGEX
src/: cli.rs  escl_server.rs  main.rs  model.rs
